added count in api test and include generate and run in api test, separated scenario and code generation